add API POST: /upload, PUT: /password, Update model
